.provarCaches/00D410000011HE0EAM/objects/rstk__syresult__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_syresult</customHelpPage>
    <description>syresult__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__syresult_desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__syresult_processid__c &amp;&apos;-&apos;&amp;rstk__syresult_desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syresult_desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Results Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syresult_loctype__c</fullName>
        <description>Location type required for Qty Reconciliation processing</description>
        <label>Location type for item</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syresult_log__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__syresult_number01__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Number 1</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syresult_number02__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Number 2</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syresult_number03__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Number 3</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syresult_objectid__c</fullName>
        <description>Object ID holder of various object types.</description>
        <label>Object Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syresult_processid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Process ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syresult_processtype__c</fullName>
        <label>Process type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QTYRECONCILE</fullName>
                </value>
                <value>
                    <fullName>WORKDAYINTGRN</fullName>
                </value>
                <value>
                    <fullName>ICIXRANALYSIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__syresult_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>pjproj lookup</description>
        <label>Project Master</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Processing Results</relationshipLabel>
        <relationshipName>pjproj</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syresult_runno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE_Run Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syresult_sequence__c</fullName>
        <displayFormat>{0}</displayFormat>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__syresult_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>sysite lookup</description>
        <label>Site Master</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Processing Results</relationshipLabel>
        <relationshipName>sysites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syresult_sycmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstk__sycmp__c</referenceTo>
        <relationshipLabel>Processing Results</relationshipLabel>
        <relationshipName>processingResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__syresult_sydiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Processing Results</relationshipLabel>
        <relationshipName>processingResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Processing Results</label>
    <listViews>
        <fullName>SYRESULT_Qty_Reconcile</fullName>
        <columns>NAME</columns>
        <columns>rstk__syresult_desc__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstk__syresult_processid__c</columns>
        <columns>rstk__syresult_number01__c</columns>
        <columns>rstk__syresult_number02__c</columns>
        <columns>rstk__syresult_number03__c</columns>
        <columns>rstk__syresult_number04__c</columns>
        <columns>rstk__syresult_number05__c</columns>
        <columns>rstk__syresult_log__c</columns>
        <columns>rstk__syresult_number06__c</columns>
        <columns>rstk__syresult_number07__c</columns>
        <columns>rstk__syresult_number08__c</columns>
        <columns>rstk__syresult_number09__c</columns>
        <columns>rstk__syresult_number10__c</columns>
        <filterScope>Everything</filterScope>
        <label>SYRESULT - Qty Reconcile</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__All_SYRESULT</fullName>
        <columns>NAME</columns>
        <columns>rstk__syresult_sydiv__c</columns>
        <columns>rstk__syresult_desc__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstk__syresult_processid__c</columns>
        <columns>rstk__syresult_number01__c</columns>
        <columns>rstk__syresult_number02__c</columns>
        <columns>rstk__syresult_number03__c</columns>
        <columns>rstk__syresult_number04__c</columns>
        <columns>rstk__syresult_number05__c</columns>
        <columns>rstk__syresult_log__c</columns>
        <columns>rstk__syresult_number06__c</columns>
        <columns>rstk__syresult_number07__c</columns>
        <columns>rstk__syresult_number08__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Syresults</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Processing_Results_Today</fullName>
        <columns>NAME</columns>
        <columns>rstk__syresult_sycmp__c</columns>
        <columns>rstk__syresult_sydiv__c</columns>
        <columns>rstk__syresult_processid__c</columns>
        <columns>rstk__syresult_desc__c</columns>
        <columns>rstk__syresult_runno__c</columns>
        <columns>rstk__syresult_sequence__c</columns>
        <columns>rstk__syresult_log__c</columns>
        <columns>rstk__syresult_number01__c</columns>
        <columns>rstk__syresult_number02__c</columns>
        <columns>rstk__syresult_number03__c</columns>
        <columns>rstk__syresult_number04__c</columns>
        <columns>rstk__syresult_number05__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Processing Results - Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__SYRESULT_ICIXR_Analysis</fullName>
        <columns>NAME</columns>
        <columns>rstk__syresult_desc__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstk__syresult_processid__c</columns>
        <columns>rstk__syresult_number01__c</columns>
        <columns>rstk__syresult_number02__c</columns>
        <columns>rstk__syresult_number03__c</columns>
        <columns>rstk__syresult_number04__c</columns>
        <columns>rstk__syresult_number05__c</columns>
        <columns>rstk__syresult_log__c</columns>
        <columns>rstk__syresult_number06__c</columns>
        <columns>rstk__syresult_number07__c</columns>
        <columns>rstk__syresult_number08__c</columns>
        <columns>rstk__syresult_number09__c</columns>
        <columns>rstk__syresult_number10__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__syresult_processid__c</field>
            <operation>contains</operation>
            <value>icixr</value>
        </filters>
        <label>SYRESULT - ICIXR Analysis</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processing Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>